# ai-inpainted-image-segmentation

./: .gitignore  README.md  pyproject.toml
src/: feature_extraction.py  inference.py  loss.py  pred_single_img.py  train.py  transform_rle.py  unified_dataset.py
src/models/: transformer_model.py  unet_model.py
